syntax = "proto3";

package games.cheetah.auth.external.google;
import public "cerberus.types.proto";

service Google {
  rpc RegisterOrLogin(RegisterOrLoginRequest) returns (RegisterOrLoginResponse);

  rpc Attach(AttachRequest) returns (AttachResponse);
}


message RegisterOrLoginRequest {
  string google_token = 1;
  string device_id = 2;
}

message RegisterOrLoginResponse {
  /**
    токен для доступа к платформе
   */
  games.cheetah.cerberus.types.Tokens tokens = 1;
  /**
    true - зарегистрирован новый игрок
   */
  bool registered_player = 2;
}


message AttachRequest {
  string device_id = 1;
  string google_token = 2;
}

message AttachResponse {

}


